# aws-pdf-gen

./: .gitignore  Makefile  README.md  architecture.drawio  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
lambda_app/: convert_to_pdf.py  requirements.txt
scripts/: build_lambda.sh  build_layer.sh
terraform/: main.tf  outputs.tf  variables.tf
tests/: test_lambda.py  test_main.py
